[build-system]
requires = [
    "setuptools~=69.5",
    "wheel~=0.46"
]
build-backend = "setuptools.build_meta"

[project]
name = "im-client"
version = "1.8.3"
description = "IM is a tool to manage virtual infrastructures on Cloud deployments"
readme = "README.md"
license = {text = "GPL version 3, http://www.gnu.org/licenses/gpl-3.0.txt"}


authors = [
    { name = "GRyCAP - Universitat Politecnica de Valencia", email = "micafer1@upv.es" }
]

urls = { homepage = "http://www.grycap.upv.es/im" }

dependencies = [
    "radl",
    "netaddr",
    "requests",
]

# Para PyPI y Twine
requires-python = ">=3.7"


[project.scripts]
im_client = "imclient.cli:client"


[tool.setuptools]
packages = ["imclient"]
include-package-data = true

[tool.setuptools.package-dir]
"" = "."
imclient = "imclient"
